--- a/views/header.html.twig
+++ b/views/header.html.twig
@@ -6,7 +6,6 @@
     <script src="../scripts/scripts.js"></script>
     <link href="../css/bootstrap.css" type="text/css" rel="stylesheet">
     <link href="../css/styles.css" type="text/css" rel="stylesheet">
-    <title>Schoolin</title>
+    <title>Zohan's Hair Salon!</title>
   </head>
   <body>
-    <div class="container">
