--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,30 +1,6 @@
 {% include 'header.html.twig' %}
-  <div id="bg"class="jumbotron">
-  <h2>Zohan's Hair Salon!</h2>
-  <h3>Create a new Stylist:</h3>
-    <form action="/stylists" method="post">
-      <div class='form-group'>
-        <label for="name"><h3>Stylist name:</h3></label>
-        <input id="name" name="name" type="text">
-      </div>
-      <div class='form-group'>
-        <button type="submit">Add a Stylist!</button>
-      </div>
-    </form>
-    {% if stylists is not empty %}
-    <h3>Here are the stylists on your crew:</h3>
-    <ul> {% for stylist in stylists %}
-    <h2><a href="/stylists/{{ stylist.getId }}">{{ stylist.getName }}</a></h2>
-      {% endfor %}
-    </ul>
-    {% else %}
-    <h3>There are no stylists on your team yet!</h3>
-    {% endif %}
-    <div class="col-sm-8 form">
-      <h3><a href="/seeall">Please Click here</a> to see all </br>of the stylists and clients.<h3>
-      <form action='/delete_stylists' method='post'>
-          <button class='btn btn-danger' type='submit'>Delete All Stylists</button>
-      </form>
-    </div>
-  </div>
+<div class="jumbotron">
+	<h1>Zohan's Hair Salon</h1>
+	<h1><a href="/stylists">Click to add or view Stylists</a></h1>
+</div>
 {% include 'footer.html.twig' %}
